slide transition in preview and apply code style

--- a/A11Y.md
+++ b/A11Y.md
@@ -1,1 +1,95 @@
+## Accessibility Improvements in the Application
 
+This document outlines the steps taken to improve the accessibility (A11Y) of the application. The following changes have been implemented to ensure that the app is more inclusive and usable for people with disabilities, especially those relying on screen readers and other assistive technologies.
+
+### 1. **Improving Button Accessibility with `aria-label`**
+
+To improve the accessibility of buttons, I have added the `aria-label` attribute to each button. This helps screen readers by providing a clear, descriptive label for actions that might not be obvious from the button text alone. The `aria-label` is particularly useful when the button contains only an icon or a short text.
+
+#### Code Example:
+
+```
+<Button onClick={closeDialog} aria-label="Cancel">
+  Cancel
+</Button>
+<Button onClick={upload} variant="contained" aria-label="Create">
+  Create
+</Button>
+```
+
+In this case, the `aria-label` provides a meaningful description of the button's purpose, improving the user experience for screen reader users.
+
+### 2. **Form Validation: Using `aria-invalid` and `aria-describedby`**
+
+For form fields that require validation, I have used the `aria-invalid` and `aria-describedby` attributes. These attributes ensure that the form’s state (valid or invalid) is communicated to screen reader users, and it also provides helpful error messages.
+
+- **`aria-invalid`**: This attribute is used to indicate whether a field has an error or not. When a form field is invalid, the screen reader will announce it as such.
+- **`aria-describedby`**: This points to an element that contains additional information or error messages, making it clear to users why a form field is invalid.
+
+#### Code Example:
+
+```
+<TextField
+  ...
+  error={error}
+  helperText={error ? "URL can't be empty" : ""}
+  margin="normal"
+  aria-invalid={error ? "true" : "false"}
+  aria-describedby="thumbnail-helper-text"
+/>
+<small id="thumbnail-helper-text" style={{ visibility: "hidden" }}>
+  Please enter a valid URL for the thumbnail image.
+</small>
+```
+
+The `aria-invalid="true"` informs the screen reader that the input field is invalid when an error is present, and `aria-describedby="thumbnail-helper-text"` links to the error message for further clarification.
+
+### 3. **Dialog Accessibility with `aria-labelledby`**
+
+For the dialog component, I have included the `aria-labelledby` attribute to associate the dialog with its title. This allows screen readers to announce the title of the dialog, making it easier for users to understand what the dialog is about when it opens.
+
+#### Code Example:
+
+```
+<Dialog
+  role="dialog"
+  aria-labelledby="upload-thumbnail-title"
+  ...
+>
+  <DialogTitle id="upload-thumbnail-title">Upload Thumbnail</DialogTitle>
+</Dialog>
+```
+
+Here, `aria-labelledby="upload-thumbnail-title"` links the dialog to its title, ensuring that screen reader users are informed about the purpose of the dialog as soon as it is opened.
+
+### 4. **Focus Management with `autoFocus`**
+
+To improve the user experience for screen reader users, I have used the `autoFocus` attribute on important form fields. This ensures that when a form or dialog is opened, the focus is immediately placed on the most relevant input field. It helps guide users through the flow without them needing to navigate manually.
+
+#### Code Example:
+
+```
+<TextField
+  id="name"
+  autoFocus
+  label="Name"
+  value={name}
+  ...
+/>
+<TextField
+  id="description"
+  label="Description"
+  ...
+/>
+<TextField
+  id="thumbnail"
+  label="Thumbnail"
+  ...
+/>
+```
+
+The `autoFocus` ensures that the `name` field receives focus first when the dialog is opened, improving the experience for users who rely on screen readers or keyboard navigation.
+
+### 5. **Color Contrast and Visual Design**
+
+In terms of visual design, I have ensured that the application adheres to the **WCAG (Web Content Accessibility Guidelines)**, particularly concerning color contrast. Material UI provides built-in support for theming, which allows for easy adjustments to the color scheme to meet the WCAG standard for color contrast.
